# sdrplay-repro-no-devices

./: CMakeLists.txt  main.cpp  readme.md
cmake/: FindLibSDRplay.cmake
